--- a/client/src/components/LandingPage/landingpage.css
+++ b/client/src/components/LandingPage/landingpage.css
@@ -2,12 +2,24 @@
     width: 100%;
     height: 100%;
     position: absolute;
+    background: linear-gradient(0deg,rgba(49, 62, 82, 0.9),rgba(49, 62, 82, 0.9)), url('../../images/signup.jpg') center no-repeat;
+    background-size: cover;
 }
 .landingpagecontainer h1 {
     text-align: center;
     margin-top: 35px;
+    font-size: 41px;
+    font-weight: bolder;
+}
+.landingpagecontainer img {
+    width: 56%;
+    display: block;
+    margin: 0 auto;
+}
+.landingpagecontainer button {
+    width: 52%;
 }
 button.ui.blue.fade.animated.button.signin {
-    margin: 99% auto;
+    margin: 45% auto;
     display: block;
 }
