--- a/client/src/components/LandingPage/landingpage.css
+++ b/client/src/components/LandingPage/landingpage.css
@@ -5,21 +5,23 @@
     background: linear-gradient(0deg,rgba(49, 62, 82, 0.9),rgba(49, 62, 82, 0.9)), url('../../images/signup.jpg') center no-repeat;
     background-size: cover;
 }
-.landingpagecontainer h1 {
+.ui.huge.header {
     text-align: center;
-    margin-top: 35px;
-    font-size: 41px;
-    font-weight: bolder;
+    font-size: 3em;
+    margin-top: 30px;
+    color: #E4EBF1;
 }
-.landingpagecontainer img {
-    width: 56%;
+img.ui.big.image {
+    width: 300px;
     display: block;
-    margin: 0 auto;
+    margin: 24px auto;
 }
-.landingpagecontainer button {
-    width: 52%;
-}
-button.ui.blue.fade.animated.button.signin {
-    margin: 45% auto;
+.ui.blue.button, .ui.blue.buttons .button {
+    background-color: #2185d0;
+    color: #fff;
+    text-shadow: none;
+    background-image: none;
     display: block;
+    margin: 24px auto;
+    width: 48%;
 }
