made changes to landing page added extra styling to Welcome screen

--- a/client/src/components/WelcomeScreen/welcomescreen.css
+++ b/client/src/components/WelcomeScreen/welcomescreen.css
@@ -16,6 +16,7 @@
     border: 1px solid limegreen;
     margin-left: 22px;
     padding: 22px;
+    margin-top: 29px;
 }
 i.user.icon {
     font-size: 44px;
