--- a/client/src/components/LandingPage/landingpage.css
+++ b/client/src/components/LandingPage/landingpage.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    background: linear-gradient(0deg,rgba(49, 62, 82, 0.9),rgba(49, 62, 82, 0.9)), url('../../images/signup.jpg') center no-repeat;
+    background: linear-gradient(0deg,rgba(49, 62, 82, 0.9),rgba(49, 62, 82, 0.9)), url('../../images/superman.jpg') center no-repeat;
     background-size: cover;
 }
 .ui.huge.header {
