--- a/client/src/components/WelcomeScreen/welcomescreen.css
+++ b/client/src/components/WelcomeScreen/welcomescreen.css
@@ -9,15 +9,16 @@
     margin-top: 10%;
 }
 .items {
-    width: 25%;
+    width: 19%;
     display: inline-block;
     text-align: center;
     background-color: limegreen;
     border: 1px solid limegreen;
     margin-left: 22px;
-    padding: 22px;
+    padding: 18px;
     margin-top: 29px;
+    border-radius: 6px;
 }
-i.user.icon {
-    font-size: 44px;
+p.welcomeicontext {
+    font-size: 12px;
 }
